# example-sea-orm

./: .env.copy  Cargo.toml  docker-compose.yml
src/: lib.rs  main.rs
src/adapter/: mod.rs
src/adapter/controller/: post_controller.rs
src/adapter/handler/: post_handler.rs
src/application/: mod.rs  transaction_manager.rs
src/application/usecase/: create_post_usecase.rs  get_post_usecase.rs  mod.rs
src/domain/: mod.rs
src/domain/entity/: mod.rs  new_post.rs  post.rs
src/domain/repository/: post_repository.rs
src/infrastructure/: di.rs  mod.rs  server.rs
src/infrastructure/datastore/: db_client.rs  mod.rs  transaction_manager_impl.rs
src/infrastructure/migration/: Cargo.toml
src/infrastructure/migration/src/: m20220101_000001_create_table.rs
src/infrastructure/repository_impl/: mod.rs  post_repository_impl.rs
