[package]
name = "sea-orm-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sea-orm = { version = "0.12.15", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }
async-trait = "0.1.79"
serde = { version = "1.0", features = ["derive"] }
actix-web = "4.0"
serde_json = "1.0"

[workspace]
members = [
    "src/infrastructure/migration",
]